objects/mockcomp__ltng_mockupSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for working with Lightning Mockups.
(Such as invalidating caches to simplify workshops)</description>
    <fields>
        <fullName>mockcomp__Enable_Mock_Image_Caching__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, then mockup images will be cached, allowing them to load much faster for presentations.</inlineHelpText>
        <label>Enable Mock Image Caching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mockcomp__Max_Search_Results__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>Maximum number of results to return when searching for files or static resources.</inlineHelpText>
        <label>Max Search Results</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mockcomp__Mock_Image_File_Filter__c</fullName>
        <defaultValue>&quot;ltng_&quot;</defaultValue>
        <inlineHelpText>If provided, only file with titles that include this text will be shown in the Mockup File Image App Builder selection.</inlineHelpText>
        <label>Mock Image File Filter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Lightning Mockup Settings</label>
</CustomObject>